[package]
name = "AP_Alert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-macros = "2.3.0"
tokio-tungstenite = { version = "0.23.1", features = [ "native-tls" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
iced = { version = "0.12", features = ["tokio", "debug"] }
